HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureParamInferenceRequirement/Expected.uv
//! Expected diagnostic metadata for the ClosureParamInferenceRequirement rejected-source specimen.

expectedDiagnostic("E-SEM-2591", "req.16.ClosureParamInferenceFailure")
